--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -13,12 +13,14 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
+    "geist": "^1.5.1",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
